--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,6 +1,6 @@
 #header
   #header-logo
-    = link_to image_tag("logo_without_icon.png"), root_path
+    = link_to image_tag("logo.png"), root_path
   #nav
     %ul
       /= tab_to "Our Approach", approach_path, active_tab("#{approach_path}&").merge({title: "Approach"})
