--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -6,7 +6,7 @@
     display:block;
     padding-top:8%;
 
-    #digital-agency {
+    #tagline {
       display:block;
       width:75%;
       margin:0 auto;
@@ -39,12 +39,30 @@
       text-align: center;
       width:75%;
       margin:0 auto;
-      h1, h4 {
-        color: #FFFFFF;
-        margin-top: 20px;
+      color: #FFFFFF;
+      padding-top:4%;
+
+      @media (max-width: $mobile-view-size) {
+        h6 {
+          display:none;
+        }
       }
-      h4 {
-        padding-bottom:60px;
+
+      ul {
+        padding-top:8%;
+
+        li {
+          display:block;
+          width:33%;
+          float:left;
+          h5,h6 {padding: 5px 10px}
+          &:nth-child(1) {
+            border-right:1px solid $front-page-grid-color;
+          }
+          &:nth-child(3) {
+            border-left:1px solid $front-page-grid-color;
+          }
+        }
       }
     }
 
@@ -53,21 +71,32 @@
       margin:0 auto;
       width:65%;
       overflow: hidden;
+      padding-top:10%;
 
       .welcome-page-client-box {
-        width: 25%;
+        width: 24%;
         float:left;
         margin:0 auto;
-
         a img {
           display:block;
           margin:0 auto;
           background: #4085D4;
           width:75% ;
         }
+        &:nth-child(1),&:nth-child(2),&:nth-child(3), &:nth-child(5), &:nth-child(6), &:nth-child(7){
+          border-right:1px solid $front-page-grid-color;
+          border-bottom:1px solid $front-page-grid-color;
+        }
+        &:nth-child(4), &:nth-child(8) {
+          border-bottom:1px solid $front-page-grid-color;
+        }
+        &:nth-child(1),&:nth-child(9),&:nth-child(10), &:nth-child(11) {
+          border-right:1px solid $front-page-grid-color;
+        }
       }
     }
   }
+
   #digital-experience {
 
     background:$tan;
