--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -2,7 +2,7 @@
   #footer-nav
     %ul
       #footer-icon
-        = tab_to image_tag("logo_without_icon.png"), root_path
+        = tab_to image_tag("logo.png"), root_path
       = tab_to image_tag("facebook_icon.png"), "https://www.facebook.com/CoshxLabs",:target => "_blank"
       = tab_to image_tag("our_blog_icon.png"), blog_posts_path, active_tab("#{blog_posts_path}$").merge({title: "Blog"})
       = tab_to image_tag("twitter_icon.png"),"https://twitter.com/coshxlabs",:target => "_blank"
