Fixes markdown generic code styles

--- a/app/assets/stylesheets/pygments.css.scss
+++ b/app/assets/stylesheets/pygments.css.scss
@@ -1,3 +1,7 @@
+pre code {
+    font-size: 1.4em;
+    padding-bottom: 15px;
+}
 .highlight {
   & > pre { padding-left: 1em; padding-top: 0.4em; padding-bottom: 0.5em; }
   font-size: 1.4em;
