--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -106,18 +106,25 @@
   padding: 0px 10px;
   background-color: $grey-white;
 
+  p {
+    font-size: 20px;
+    font-family: "Merriweather Sans", sans-serif;
+    line-height: 28px
+  }
+
   .row {
     padding-left: 0px;
     padding-right: 0px;
   }
 
   h4 {
-    font-size: 24px !important;
+    font-size: 22px !important;
     color: $dark-grey;
     font-weight: bold;
+    font-family: "Merriweather Sans", sans-serif;
   }
   h3 {
-    font-size: 42px !important;
+    font-size: 38px !important;
     color: $dark-grey;
   }
   h2 {
@@ -130,13 +137,24 @@
     }
   }
 
+  ul {
+    list-style-type: disc;
+    margin-left: 30px
+  }
+
+  pre {
+    line-height: 1.4em;
+    font-size: 15px
+  }
+
   li {
     text-align: left;
-    font-size: 15px;
-    line-height: 26px;
-    font-family: "Merriweather Sans", serif;
+    font-family: "Merriweather Sans", sans-serif;
+    font-size: 20px;
+    line-height: 1.45;
     margin-top: 10px;
     margin-bottom: 10px;
+    color: $dark-grey;
     a {
       color: #38A8CC;
     }
