a few more tiny changes to code boxes

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -139,12 +139,13 @@
 
   ul {
     list-style-type: disc;
-    margin-left: 30px
+    margin-left: 30px;
   }
 
   pre {
     line-height: 1.4em;
-    font-size: 15px
+    font-size: 14px;
+    letter-spacing: -0.03em;
   }
 
   li {
