removes red border box for code block code that seems to have an error

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -139,6 +139,9 @@
     font-size: 14px;
     letter-spacing: -0.03em;
   }
+  pre .err {
+    border: none;
+  }
   ul {
     list-style-type: disc;
     margin-left: 30px;
